# anvil-benchmark-internship

./: # Project Anvil – Complete Task Creation.md  .gitignore  README.md  add_tasks.py  walkthrough.md
anvil-cli/: .env.example  README.md  main.py  pyproject.toml
anvil-cli/docs/: TASK_CREATION_GUIDE.md
anvil-cli/src/anvil/: __init__.py  publish.py  util.py
anvil-cli/src/anvil/_vendor/: __init__.py
anvil-cli/src/anvil/_vendor/swe_bench_pro/: __init__.py  gather_patches.py  swe_bench_pro_eval.py
anvil-cli/src/anvil/agents/: __init__.py  harness.py  mini_swe_agent.py  swe_agent.py
anvil-cli/src/anvil/agents/defaults/: minisweagent_config.yaml  sweagent_config.yaml
anvil-cli/src/anvil/evals/: __init__.py  pass_at_k.py
anvil-cli/src/anvil/wizard/: converters.py  generators.py  templates.py
flask-task-api/: README.md  app.py  auth.py  models.py  requirements.txt
tasks/task-1/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-10/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-2/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-3/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-4/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-5/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-6/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-7/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-8/: problem.md  solution.diff  solution_snippet.py  tests.py
tasks/task-9/: problem.md  solution.diff  (+2 more)
